# AIHoloImager

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  LICENSE-External.md  README.md  azure-pipelines.yml
Source/: CMakeLists.txt
Source/App/: CMakeLists.txt  Main.cpp
Source/Base/: CMakeLists.txt
Source/Base/Include/Base/: ComPtr.hpp  Dll.hpp  Enum.hpp  ErrorHandling.hpp  MiniWindows.hpp  SmartPtrHelper.hpp  Symbol.hpp  Timer.hpp  Util.hpp  Uuid.hpp
Source/Base/Source/: Dll.cpp  ErrorHandling.cpp  Timer.cpp  Util.cpp  pch.hpp
Source/GpuDiffRast/: CMakeLists.txt
Source/GpuDiffRast/Source/: pch.hpp
Source/GpuDiffRast/Source/Shader/: AntiAliasBwdCs.hlsl  AntiAliasIndirectCs.hlsl
Source/GpuDiffRast/Source/Torch/: GpuDiffRenderTorch.cpp
Source/GpuDiffRender/: CMakeLists.txt
Source/GpuDiffRender/Source/: GpuDiffRender.cpp  GpuDiffRender.hpp
Source/GpuDiffRender/Source/Shader/: AccumGradMipsCs.hlsl  AntiAliasBwdCs.hlsl  AntiAliasConstructOppoVertCs.hlsl  AntiAliasConstructOppoVertHashCs.hlsl  AntiAliasFwdCs.hlsl  AntiAliasIndirectCs.hlsl  Common.hlslh  InterpolateBwdCs.hlsl  InterpolateBwdDerivateAttribsCs.hlsl  InterpolateFwdCs.hlsl  InterpolateFwdDerivateAttribsCs.hlsl  RasterizeBwdCs.hlsl  RasterizeBwdDerivateBcCs.hlsl  RasterizeFwdDerivateBcGs.hlsl  RasterizeFwdDerivateBcPs.hlsl  RasterizeFwdGs.hlsl  RasterizeFwdPs.hlsl  RasterizeFwdVs.hlsl  TextureBwdCs.hlsl  TextureBwdMipCs.hlsl  TextureCopyCs.hlsl  TextureFwdCs.hlsl  TextureFwdMipCs.hlsl
Source/GpuDiffRender/Source/Torch/: GpuDiffRenderTorch.cpp  GpuDiffRenderTorch.hpp  MiniCudaRt.cpp  MiniCudaRt.hpp  PyTorchBindings.cpp
Source/GpuSystem/: CMakeLists.txt
Source/GpuSystem/Include/Gpu/: GpuBuffer.hpp  GpuBufferHelper.hpp  GpuCommandAllocatorInfo.hpp  GpuCommandList.hpp  GpuCommandPool.hpp  GpuCommandQueue.hpp  GpuConstantBuffer.hpp  GpuDescriptorAllocator.hpp  GpuDescriptorHeap.hpp  GpuFence.hpp  GpuFormat.hpp  GpuMemoryAllocator.hpp  GpuMipmapper.hpp  GpuQuery.hpp  GpuResource.hpp  GpuResourceViews.hpp  GpuSampler.hpp  GpuShader.hpp  GpuSystem.hpp  GpuTexture.hpp  GpuUtil.hpp  GpuVertexAttrib.hpp  GpuVertexLayout.hpp  InternalDefine.hpp  Symbol.hpp
Source/GpuSystem/Source/: GpuBuffer.cpp  GpuCommandAllocatorInfo.cpp  GpuCommandList.cpp  GpuCommandPool.cpp  GpuCommandQueue.cpp  GpuConstantBuffer.cpp  GpuDescriptorAllocator.cpp  GpuDescriptorHeap.cpp  GpuFence.cpp  GpuFormat.cpp  GpuMemoryAllocator.cpp  GpuMipmapper.cpp  GpuQuery.cpp  GpuResource.cpp  GpuResourceViews.cpp  GpuSampler.cpp  GpuShader.cpp  GpuSystem.cpp  GpuTexture.cpp  GpuVertexAttrib.cpp  GpuVertexLayout.cpp  InternalImp.hpp  pch.hpp
Source/GpuSystem/Source/D3D12/: D3D12Conversion.cpp  D3D12Conversion.hpp
Source/GpuSystem/Source/Internal/: GpuBufferInternal.cpp  GpuBufferInternal.hpp  GpuCommandAllocatorInfoInternal.cpp  GpuCommandAllocatorInfoInternal.hpp  GpuCommandListInternal.cpp  GpuCommandListInternal.hpp  GpuCommandPoolInternal.cpp  GpuCommandPoolInternal.hpp  GpuCommandQueueInternal.cpp  GpuCommandQueueInternal.hpp  GpuDescriptorHeapInternal.cpp  GpuDescriptorHeapInternal.hpp  GpuFenceInternal.cpp  GpuFenceInternal.hpp  GpuQueryInternal.cpp  GpuQueryInternal.hpp  GpuResourceInternal.cpp  GpuResourceInternal.hpp  GpuResourceViewsInternal.cpp  GpuResourceViewsInternal.hpp  GpuSamplerInternal.cpp  GpuSamplerInternal.hpp  GpuShaderInternal.cpp  GpuShaderInternal.hpp  GpuSystemInternal.cpp  GpuSystemInternal.hpp  GpuSystemInternalFactory.cpp  GpuSystemInternalFactory.hpp  GpuTextureInternal.cpp  GpuTextureInternal.hpp  GpuVertexAttribInternal.cpp  GpuVertexAttribInternal.hpp  GpuVertexLayoutInternal.cpp  GpuVertexLayoutInternal.hpp
Source/GpuSystem/Source/Shader/: Atomic.hlslh  GenMipmapCs.hlsl  Platform.hlslh
Source/Lib/: CMakeLists.txt
Source/Lib/Include/AIHoloImager/: AIHoloImager.hpp  Common.hpp  ElementFormat.hpp  Mesh.hpp  Texture.hpp
Source/Lib/Source/: AIHoloImager.cpp  AIHoloImagerInternal.hpp  ElementFormat.cpp  Mesh.cpp  Texture.cpp  pch.hpp
Source/Lib/Source/Delighter/: Delighter.cpp  Delighter.hpp  Delighter.py
Source/Lib/Source/DiffOptimizer/: DiffOptimizer.cpp  DiffOptimizer.hpp  DiffOptimizer.py
Source/Lib/Source/GSplat/: GaussianSplatting.cpp
Source/Lib/Source/Gpu/: GpuBuffer.cpp  GpuBuffer.hpp  GpuBufferHelper.hpp  GpuCommandList.cpp  GpuCommandList.hpp  GpuDescriptorAllocator.cpp  GpuDescriptorAllocator.hpp  GpuDescriptorHeap.cpp  GpuDescriptorHeap.hpp  GpuFormat.cpp  GpuMemoryAllocator.cpp  GpuMemoryAllocator.hpp  GpuResource.cpp  GpuResource.hpp  GpuResourceViews.cpp  GpuResourceViews.hpp  GpuSampler.cpp  GpuSampler.hpp  GpuShader.cpp  GpuShader.hpp  GpuSystem.cpp  GpuSystem.hpp  GpuTexture.cpp  GpuTexture.hpp  GpuUtil.hpp  GpuVertexAttrib.cpp  GpuVertexAttrib.hpp
Source/Lib/Source/MaskGen/: MaskGenerator.cpp  MaskGenerator.hpp  MaskGenerator.py  U2Net.py
Source/Lib/Source/MeshGen/: DiffOptimizer.cpp  DiffOptimizer.hpp  DiffOptimizer.py  GaussianSplatting.cpp  GaussianSplatting.hpp  InvisibleFacesRemover.cpp  InvisibleFacesRemover.hpp  Lrm.py  LrmFlexiCubes.py  LrmMarchingCubes.py  MarchingCubes.cpp  MarchingCubes.hpp  MeshGenerator.cpp  MeshGenerator.hpp  MeshGenerator.py  PrefixSumScanner.cpp  PrefixSumScanner.hpp  Sorter.cpp  Sorter.hpp
Source/Lib/Source/MeshOpt/: MeshOptimizer.cpp  MeshOptimizer.hpp
Source/Lib/Source/MeshRecon/: Image2Depth.py  MeshReconstruction.cpp  MeshReconstruction.hpp
Source/Lib/Source/MeshSimp/: MeshSimplification.cpp  MeshSimplification.hpp
Source/Lib/Source/MvDiffusion/: MultiViewDiffusion.cpp  MultiViewDiffusion.hpp  MultiViewDiffusion.py
Source/Lib/Source/MvRenderer/: MultiViewRenderer.cpp  MultiViewRenderer.hpp
Source/Lib/Source/PostProcessor/: PostProcessor.cpp  PostProcessor.hpp
Source/Lib/Source/PrefixSumScanner/: PrefixSumScanner.cpp  PrefixSumScanner.hpp
Source/Lib/Source/Python/: PythonSystem.cpp  PythonSystem.hpp  PythonSystem.py
Source/SubMConv/: CMakeLists.txt
Source/SubMConv/Source/: pch.hpp
Source/TensorConverter/: CMakeLists.txt
Source/TensorConverter/Source/: MiniCudaRt.cpp  MiniCudaRt.hpp  TensorConverter.cpp  pch.hpp
(+290 files in other folders)
